APT-1751-APT-1758-APT-1761-APT-1753-APT-1760-APT-1756 + lama comments + re fix some broken items (#66)
* apt-1751 last transaction

* apt-1758 tags only for non liquid

* apt-1761 unbonding period

* lama noted to remove line from unstake calc

* lama noted claim btn stretch fix

* apt-1753 fix mobile nav with intercom icon + apt-1760 add bottom padding to handle new intercom position overlapping things in stake unstake calculators

* fix details view: on click open stake tab instead of claim except for claim clicked

* apt-1756 fix grid cols based on number of values

* lint

* lint

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -430,3 +430,10 @@ button,
     margin-right: 1rem;
   }
 }
+
+@media (max-width: 1024px) {
+  .intercom-lightweight-app-launcher {
+    bottom: 60px !important;
+    right: 10px !important;
+  }
+}
